--- a/less/defs.less
+++ b/less/defs.less
@@ -7,6 +7,8 @@
 @tablet-size: ~"(min-width: 768px)";
 @desktop-size: ~"(min-width: 1170px)";
 
+@android-hack: ~"all and (-webkit-min-device-pixel-ratio:0) and (min-resolution: .001dpcm) and (pointer: coarse)";
+
 @retina2x: ~"(min-resolution: 1.5dppx), (min-resolution: 144dpi)";
 
 @blue: #1b35a4;
