--- a/less/main-footer.less
+++ b/less/main-footer.less
@@ -1,4 +1,6 @@
 .main-footer{
+    margin-top:auto; // for flex justify
+
     height:327px;
     background: @black;
 
@@ -58,10 +60,12 @@
 .main-footer__menu{
     order:2;
     padding-top:34px;
-    padding-left:15%;
+    padding-left:5%;
 
     text-align: left;
-
+    @media @mobile-size480{
+        padding-left:15%;
+    }
     @media @tablet-size{
         order:1;
 
