--- a/less/style.less
+++ b/less/style.less
@@ -19,6 +19,10 @@
 @import "card.less";
 
 body{
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+
     font-size:18px;
     font-family: "Geometria Regular", Arial, sans-serif;
     color: @white;
